# aedi-reuniones-remotas

./: .gitignore  README.md
TPI/: CMakeLists.txt  auxiliares.cpp  auxiliares.h  definiciones.h  dependencias_de_funciones  ejercicios.cpp  ejercicios.h  main.cpp
TPI/TPI-tests/: Test.cpp  Test.h  TestSuite.cpp  TestSuite.h  ej10TEST.cpp  ej11TEST.cpp  ej1TEST.cpp  ej2TEST.cpp  ej3TEST.cpp  ej4TEST.cpp  ej5TEST.cpp  ej6TEST.cpp  ej7TEST.cpp  ej8TEST.cpp  ej9TEST.cpp  test_suites.cpp  test_suites.h
TPI/tests/: ej10TEST.cpp  ej11TEST.cpp  ej11secretos.cpp  ej2TEST.cpp  ej3TEST.cpp  ej4TEST.cpp  ej5TEST.cpp  ej6TEST.cpp  ej7TEST.cpp  ej8TEST.cpp  ej9TEST.cpp
